# capston

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  mkdocs.yml
backend/: .env.docker.example  .env.example  .env.local.example  Dockerfile  Dockerfile.dev  README.md  manage.py  pyproject.toml
backend/apps/amenities/: admin.py  apps.py  models.py
backend/apps/metrics/: apps.py  models.py
backend/apps/neighborhoods/: admin.py  adong_compat.py  apps.py  compare_dummy.py  detail_dummy.py  detail_real.py  explore.py  match.py  models.py  score_point.py  serializers.py  summary.py  urls.py  views.py
backend/apps/parks/: admin.py  apps.py  models.py  views.py
backend/apps/parks/migrations/: 0001_initial.py
backend/apps/preference/: apps.py  optimizer.py  urls.py  views.py
backend/apps/realestate/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/regions/: admin.py  apps.py  models.py
backend/apps/transit/: admin.py  apps.py  models.py  views.py
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
backend/scripts/: README.md  __init__.py  _django.py  compute_scores.py  fetch_amenities.py  fetch_realestate.py  fetch_transit.py
backend/scripts/etl/: README.md
backend/scripts/maintenance/: backfill_rent_deal_adong.py  import_rent_deal_ldong_adong_map.py
backend/scripts/scoring/: README.md  compute_nearest_subway.py  compute_scores.py
backend/scripts/update/: README.md  fetch_amenities.py  fetch_realestate.py  fetch_transit.py
backend/scripts/validate/: README.md
(+428 files in other folders)
