[project]
name = "slgi-backend"
version = "0.1.0"
description = "슬기로운 자취생활 — Django 백엔드"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "django-environ>=0.11",
    "psycopg[binary]>=3.1",
    "django-allauth[socialaccount]>=0.61",
    "django-redis>=5.4",
    "scipy>=1.11",
    "gunicorn>=21.2",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "pytest>=8.2",
    "pytest-django>=4.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# placeholder package list — Django apps are not installed via setuptools
packages = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length is handled by black

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
